--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "apexcharts": "^3.50.0",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^11.3.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-icons": "^5.2.1",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@iconify/react": "^4.1.1",
     "@types/react": "^18.3.3",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
